@startuml model
hide empty members

class Model
interface Element
interface ModelElement
class Solution
class System

Model *--> "*" ModelElement

Element <|-- ModelElement

ModelElement <|-- Solution
ModelElement <|-- System
ModelElement <|-- ModelGroup

ModelElement "*" <-- ModelGroup
@enduml

@startuml solution
hide empty members

interface Element
interface SolutionElement
class Solution
class System

Element <|-- SolutionElement

Solution *--> "*" SolutionElement

SolutionElement <|-- System
SolutionElement <|-- SolutionGroup

SolutionElement "*" <-- SolutionGroup
@enduml

@startuml container
hide empty members

interface Element
interface SystemElement
class System
class Container

System *--> "*" SystemElement

Element <|-- SystemElement

SystemElement <|-- Container
SystemElement <|-- SystemGroup

SystemElement "*" <-- SystemGroup
@enduml

@startuml component
hide empty members

interface Element
interface ContainerElement
class Container
class Component

Container *--> "*" ContainerElement

Element <|-- ContainerElement

ContainerElement <|-- Component
ContainerElement <|-- ContainerGroup

ContainerElement "*" <-- ContainerGroup
@enduml
